Bug 1369627 - Part 2: Send DimensionInfo down to the content process synchronously when creating a new window, r=smaug

MozReview-Commit-ID: GlzJ491RLUE